@@ -1817,6 +1817,100 @@ def getToolPanel_WindowsIcon():
     return icon
 
 #----------------------------------------------------------------------
+def getToolPinData():
+    return \
+'\x89PNG\r\n\x1a\n\x00\x00\x00\rIHDR\x00\x00\x00\x18\x00\x00\x00\x18\x08\x06\
+\x00\x00\x00\xe0w=\xf8\x00\x00\x00\x04sBIT\x08\x08\x08\x08|\x08d\x88\x00\x00\
+\x02\xf8IDATH\x89\xed\x95]HSa\x1c\xc6\x9f\xb3\x9d37\x9dn\xd3\xa9gnj\x16\xe5\
+\x07}(\xa9a\x99\xa8D\tY\tE\x04A7EW\xd5]ED\x10Q\xd1]]t#AW\t\x85\x86\xa1\x89\
+\x1f-\x02\xadYYi\x99\xf9\x99\xd3\xc9\xd19\xf7\xed6\xb7\xb3\xf3\xd1\x95P\x91\
+\x9bS\xa2\x9b\x9e\xcb\xf7\xe5y~\xff\x07\xfe//\xf0/\xc5v4\xec\xe2\xbft\x16\
+\x88\xf6q\xc9Z3\x88\x95.\xb8\xbe\x9e\xcd\x9e\xeb\xe7G\xe5KfBZ\x92\x1f\x14\
+\x0b\xeb\x06X\xdd\x06\x932+\xe7\x15\xa1\xcd~)I\xa2\x97\xd6\x05\xe0\xbf\xf6\
+\xa7\xfa\xdf\xb4\x8d\xf1\xd6\x1eu"\xe9\x04dj\x88\x8bV\xf0$\x07\x14\xd4zD\x95\
+\xb6%n\xeb\xfe\x06\xc4\xd3F\x89J\xc7\xc7\x0c\x00\x00afr\x93\xdfn}\x1c\x9e\
+\x1d-\x86m\x022\xf7\x10\x14\x82\x13\xa2\xc7\x02\xf8\xe6\xc1*hH\xf2\xab\xcc\
+\x92\x9c\xf2[T\xd1\xbeGD|V(&\x00\x00x&\x06\r\xd2q\xd37\xb9\x8fI\xe4\x1d\x1f\
+\xc1\x92*\xc0\xc5@\xc6yA\x89~\x08.\x1b\x04\x1f\x01\xdeP:I\xec\xac\xb8,\xaf\
+\xb9\xda\x14\x13\x00\x00&\xee_\xaaW:\x86\xcfJi\x03 \xa7\x80\xc04\xc4\xb0\x13\
+,A\x83\x0fqPps\x80\xc5\x06\xce\x0e\xf8J\x8e\x1f\xdbr\xf1\xce\xd3e/\xb9\x1a\
+\x80U\xa6e\x07zfPVc\x80\x96\x04\x94d*(u\x06\xc8%\'\xe2\xf2\xab`\x0b&A\xa2\
+\x1dY\xf4\x0c\xf5w\'\x18r?\xc5\xdc\xc0\xd2\xf5\xf0\xf9\xd7\xf7\xa6\x83n\xb7\
+\x0b"\xc2`\xe7\x18\x14d\xa8A\x1b\xd2\xa6R+O\xde[\x80\xf6\x19)O\xb2\xe8s\x0b\
+\xc4\xdf\xbdQ\x1b0\x1f\x8d\xe9s}\x8d\x15%G\x0eA\x1a\xb0\xc3\x1f\x0c`a~\x1e\
+\x0e\xf3\xb4G\x92\xbc\xb56{G\xedP$\x7f\xc4\x06\xbc\xdfU\xe4\x1a\xe8l\xa5f:\
+\xf4nV@\x98\x0b#m{%x\x15\x8d`P\xbc\xa9\xdbVw-\xda\x80\x7fl\xc0\xf4vm\xe4\x06\
+\x9b\x1f\xf8?7\x1bx\'\xa3\x97\x11@\x98\x17\xe0f\xa6\x91\xac\xfa\x04\x8f\xdd\
+\r}\xed\x95\x85h\xe1+\x02|\xcc\xe8\xb94v\xaczi,\x00B_\x8c\xf9)/\x16\xb9 B\
+\x810\x82~/\x12\x92\xb5\xb0\x99G\x87\xd7\x0cH5\xe4\xd4\xc7%\xd7\x98\x952\xc5\
+\x810\x99\xb0\xdd\xb50\x9b\xf9\xc1\xf4\x1dG\xf7\xd3H\x14\xe6 U\xa6C\xd4\xd3\
+\xa7\x00\xbc\x88\x06\x88\xbaE\xa2w$e\xfc]w\xe3\xb8\xb1kOu\x89\x9c\xa2(\x10\
+\x04\xa4\x08\x84H\xc1\xe1M?\xbc\xe1\xcc\xed\xb6\x98\x1b\xfc2AR\x9e#;K_\xaaQ\
+\xab\xda\xfao\xb4_\xe0\xadC\xd5\x023x\xda\xfe\xe6\xf5^R\x9b\xb9\xaaw\x14Q-\
+\xadO\xf2RR4B_\xafQ\xf3\xf3\xb9\xdb\xd4T(Z\x06\xa9u\x03\x94J\xa5\xb3|w\xf1\
+\xc8\xba\x83V\x92F\xa3\x0e\x19\xdb\x1bO\xac\xd5\x1f\xf1\xa7R(\x14o\xcb\xca\
+\x8a\x9d\x19\xfa\xec\x96\xb5\x02"J\xa7K\xbf;5\xf1A\xf6W\xc2\xffkY?\x00C\xe14\
+\x8e5_\xa6\x8b\x00\x00\x00\x00IEND\xaeB`\x82' 
+
+def getToolPinBitmap():
+    return BitmapFromImage(getToolPinImage())
+
+def getToolPinImage():
+    stream = cStringIO.StringIO(getToolPinData())
+    return ImageFromStream(stream)
+
+def getToolPinIcon():
+    icon = EmptyIcon()
+    icon.CopyFromBitmap(getToolPinBitmap())
+    return icon
+
+#----------------------------------------------------------------------
+def getToolPinDownData():
+    return \
+'\x89PNG\r\n\x1a\n\x00\x00\x00\rIHDR\x00\x00\x00\x18\x00\x00\x00\x18\x08\x06\
+\x00\x00\x00\xe0w=\xf8\x00\x00\x00\x04sBIT\x08\x08\x08\x08|\x08d\x88\x00\x00\
+\x02\xcfIDATH\x89\xed\x93]HS\x01\x18\x86\xdf\xb3\x9d3\xa7N7u\xea\xd1\xcd\xbf\
+\xa2\xfc\xc1LI\x8d\xcaD%Lh\x95Pt\x13tStU\xddUD\x04\x11\x15]v\xd1\x8d\x04]%\
+\x14\x1a\x86&\xa9-\x02\xcdI\x9a?\xa9S\xa7\xe6tr\xdc\x9c\xfbw\x9b\xf3\xec\xfc\
+t[\x8a\xe22\xe8\xa2\xde\xcb\xef\xe2y\xbe\x17\xbe\x0f\xf8\x9f\x7f3lG\xe3a~\
+\xb4\xb3@t\xccHv\xcb"6\x0e\xb8\x81\x9e}\xde\xfb\xd7M\xf253!-\xcb\x0f\x89\xc5\
+\xf5#lZ\xb6A\x91\x99\xf3\x89Pg}\x94\xc4\xd3k\xbb\x12\xf0\xe3\xc3\xc9\x81\xde\
+\xf6i\xde\xd6\xa3\x8a#]\x80L\x05q\xd5\x06\x9e\xe4\x80\x02\x9dWT\xaa[\xa3\nk\
+\x1b\x11C\xeb%\xca4>b\x01\x00\x08\x8bs{\x03\x0e\xdb\xab\xf0\x92\xa9\x14\xf6Y\
+\xc8<FD\x0b.\x88^\x0b\xe0_\x06\x1bMC\x92_m\x96\xe4T<\xa2JN\xbc$b2\xd7#\x12\
+\x00\x80wvL+\x9d1L\xc8\xfdL\x1c\xef\x1c\x04K*\x017\x03\x19\xe7\x03%\x06 \xb8\
+\xed\x10\xfc\x04xm\xf9\x1cq\xa8\xf2\xb6\xbc\xeensD\x02\x00\x98}v\xabA\xe1\
+\x9c\xbc*\xa5\xb5\x80\x9c\x02\x82\x0b\x10\xc3.\xb0\x04\r~\x9dC4g\x05,vp\x0e\
+\xc0_v\xe1\xfc\xfe\x9bO\xdeld\x90\xdb\tl25;\xd2\xb3\x88#uZ\xa8I@A&\x83R\xa5\
+\x83\\s!*\xbf\x1a\xf6P<$\xea\xa9U\xafq\xb8;V\x9b;\x14q\x03K\xd7\x8bw\xe3\xfd\
+\x86S\x1e\x8f\x1b"\xc2`\xad\x0c\n\xd2U\xa0\xb5)\xf3\xc9U\x17\x9f\xae@\xfd\
+\x96\x94\xc7[4\xb9\x05\xe2V\x8c-\x1b0\x83\xfaT\xeb@Se\xd9\xd9\xd3\x90\x06\
+\x1d\x08\x84\x82XY^\x86\xd3\xbc\xe0\x95$\x16\xea\xb2\x0e\xea\x8c\xdb-\xb7m\
+\x03>\xe0.q\x8ft\xb6Q\x8b\x1d\x1a\x0f+ \xcc\x85\x91RT\x05^I#\x14\x12\x1f\xa6\
+\x1d\xa8\xbf\xb7\x13\xf8\xa6\x06L_\xd7\x1en\xac\xe5y\xe0[\x8b\x96w1\x1a\x19\
+\x01\x84y\x01\x1ef\x01\x89\xca!x\x1d\x1ehtwVv\n\xdf$\xf03\xa6k)\xect\xcd\xda\
+t\x10\x84\xa6\x14\xcb\xf3>\xacr!\xac\x07\xc3\x08\x05|\x88MT\xc3n6M\xfe\xb6 Y\
+\x9b\xd3\x10\x95XgV\xc8\xa2O\x86\xc9\xd8"\xf7\xcaR\xc6W\xc3w\x9c\xab\xa5\x11\
+\'X!U\xa4B\xd4\xd0\x97\x00|\xd8\xa9`\xcb+\x12}SI3_\xba\x9bf\xf4]\xc7j\xca\
+\xe4\x14E\x81  Ep\x9d\x14\x9c\xbe\xd43\xd9W\x1e\xb7G\xdc\xe0\x17s|\x9e3+SS\
+\x9e\xa0R\xb6\x0f?x\x7f\x83\xb7\x19k\x04f\xec\xb2\xa3\xf7\xf3qR\x9d\xb1\xed\
+\xff\xec(\xadm\xaf\xf3\x92\x92\x12\x84\x81>}\xc2\xcfs\x8f\xa1\xb9X\xb4\x8cQ\
+\xbb\x16\x00@\xc5\xd1\xd2\xa9?\x02\xfak\x99\x18\xed\x8f\xd9-\xe3\x07\xd7\x1c\
++r\xfbF\x9e\x02\x00\x00\x00\x00IEND\xaeB`\x82' 
+
+def getToolPinDownBitmap():
+    return BitmapFromImage(getToolPinDownImage())
+
+def getToolPinDownImage():
+    stream = cStringIO.StringIO(getToolPinDownData())
+    return ImageFromStream(stream)
+
+def getToolPinDownIcon():
+    icon = EmptyIcon()
+    icon.CopyFromBitmap(getToolPinDownBitmap())
+    return icon
+
+#----------------------------------------------------------------------
 def getToolRadioBoxData():
     return \
 "\x89PNG\r\n\x1a\n\x00\x00\x00\rIHDR\x00\x00\x00\x18\x00\x00\x00\x16\x08\x06\
