@@ -97,6 +97,7 @@ Please upgrade wxWidgets to %d.%d.%d or higher.''' % MinWxVersion)
         conf.pos = wx.Point(conf.ReadInt('x', -1), conf.ReadInt('y', -1))
         conf.size = wx.Size(conf.ReadInt('width', 800), conf.ReadInt('height', 600))
         conf.embedPanel = conf.ReadInt('embedPanel', True)
+        conf.panelPinState = conf.ReadInt('panelPinState', False)
         conf.showToolPanel = conf.ReadInt('showToolPanel', True)
         conf.sashPos = conf.ReadInt('sashPos', 200)
 
@@ -135,6 +136,7 @@ Please upgrade wxWidgets to %d.%d.%d or higher.''' % MinWxVersion)
         conf.WriteInt('width', conf.size.x)
         conf.WriteInt('height', conf.size.y)
         conf.WriteInt('embedPanel', conf.embedPanel)
+        conf.WriteInt('panelPinState', conf.panelPinState)
         conf.WriteInt('showTools', conf.showToolPanel)
         if not conf.embedPanel:
             conf.WriteInt('panelX', conf.panelPos.x)
