@@ -1,3 +1,12 @@
+2007-07-09  Scroll  <scroll@localhost.localdomain>
+
+	* Command line arguments are parsed again, using optparse;
+	wxMAC-specific fixes for frame positioning; added more component
+	icons generated from screenshots; configuration saving restored;
+	"push pin" button for sticky attribute panel page. Bugs to be
+	fixed: PyDeadObjectError is exiting with not the first attribute
+	page selected.
+
 2007-07-06  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>
 
 	* Use GridBagSizer for tool placement, with automatic position
